--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -62,9 +62,10 @@ set(tfs_SRC
 	${CMAKE_CURRENT_LIST_DIR}/scriptmanager.cpp
 	${CMAKE_CURRENT_LIST_DIR}/server.cpp
 	${CMAKE_CURRENT_LIST_DIR}/signals.cpp
-	${CMAKE_CURRENT_LIST_DIR}/spawn.cpp
-	${CMAKE_CURRENT_LIST_DIR}/spells.cpp
-	${CMAKE_CURRENT_LIST_DIR}/storeinbox.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/spawn.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/spells.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/spell_registry.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/storeinbox.cpp
 	${CMAKE_CURRENT_LIST_DIR}/talkaction.cpp
 	${CMAKE_CURRENT_LIST_DIR}/tasks.cpp
 	${CMAKE_CURRENT_LIST_DIR}/teleport.cpp
@@ -150,9 +151,10 @@ set(tfs_HDR
 	${CMAKE_CURRENT_LIST_DIR}/server.h
 	${CMAKE_CURRENT_LIST_DIR}/signals.h
 	${CMAKE_CURRENT_LIST_DIR}/spawn.h
-	${CMAKE_CURRENT_LIST_DIR}/spectators.h
-	${CMAKE_CURRENT_LIST_DIR}/spells.h
-	${CMAKE_CURRENT_LIST_DIR}/storeinbox.h
+        ${CMAKE_CURRENT_LIST_DIR}/spectators.h
+        ${CMAKE_CURRENT_LIST_DIR}/spells.h
+        ${CMAKE_CURRENT_LIST_DIR}/spell_registry.h
+        ${CMAKE_CURRENT_LIST_DIR}/storeinbox.h
 	${CMAKE_CURRENT_LIST_DIR}/talkaction.h
 	${CMAKE_CURRENT_LIST_DIR}/tasks.h
 	${CMAKE_CURRENT_LIST_DIR}/teleport.h
