--- a/config.lua.dist
+++ b/config.lua.dist
@@ -155,6 +155,14 @@ removeOnDespawn = true
 walkToSpawnRadius = 15
 monsterOverspawn = false
 
+-- Monster Group Scaling
+-- Adjusts monster power based on the attacking player group size
+monsterGroupScaling = false
+-- Percentage increase in monster attack per extra player
+monsterGroupAttackScale = 20
+-- Percentage increase in monster defense per extra player
+monsterGroupDefenseScale = 20
+
 -- Stamina
 staminaSystem = true
 timeToRegenMinuteStamina = 3 * 60
