--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -75,9 +75,10 @@ set(tfs_SRC
 	${CMAKE_CURRENT_LIST_DIR}/trashholder.cpp
 	${CMAKE_CURRENT_LIST_DIR}/vocation.cpp
 	${CMAKE_CURRENT_LIST_DIR}/weapons.cpp
-	${CMAKE_CURRENT_LIST_DIR}/wildcardtree.cpp
-	${CMAKE_CURRENT_LIST_DIR}/xtea.cpp
-	)
+        ${CMAKE_CURRENT_LIST_DIR}/wildcardtree.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/xtea.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/behaviortree.cpp
+        )
 
 set(tfs_HDR
 	${CMAKE_CURRENT_LIST_DIR}/otpch.h
@@ -166,9 +167,10 @@ set(tfs_HDR
 	${CMAKE_CURRENT_LIST_DIR}/trashholder.h
 	${CMAKE_CURRENT_LIST_DIR}/vocation.h
 	${CMAKE_CURRENT_LIST_DIR}/weapons.h
-	${CMAKE_CURRENT_LIST_DIR}/wildcardtree.h
-	${CMAKE_CURRENT_LIST_DIR}/xtea.h
-	)
+        ${CMAKE_CURRENT_LIST_DIR}/wildcardtree.h
+        ${CMAKE_CURRENT_LIST_DIR}/xtea.h
+        ${CMAKE_CURRENT_LIST_DIR}/behaviortree.h
+        )
 
 set(tfs_MAIN ${CMAKE_CURRENT_LIST_DIR}/main.cpp PARENT_SCOPE)
 
